--- a/Bipeople/Bipeople/Base.lproj/MarkerInfoWindow.xib
+++ b/Bipeople/Bipeople/Base.lproj/MarkerInfoWindow.xib
@@ -5,7 +5,6 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13156.2"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,56 +12,40 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MarkerInfoWindow" customModule="Bipeople" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="217" height="62"/>
+            <rect key="frame" x="0.0" y="0.0" width="216" height="72"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="goI-hp-skK">
-                    <rect key="frame" x="0.0" y="0.0" width="217" height="62"/>
-                    <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Jca-yd-iz4">
-                            <rect key="frame" x="0.0" y="0.0" width="155" height="62"/>
-                            <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a5u-Kn-4Zh" userLabel="Name">
-                                    <rect key="frame" x="0.0" y="0.0" width="155" height="31"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jgm-AN-zqT" userLabel="Address">
-                                    <rect key="frame" x="0.0" y="31" width="155" height="31"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                            </subviews>
-                        </stackView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0ON-1t-4DH" userLabel="Start">
-                            <rect key="frame" x="155" y="0.0" width="62" height="62"/>
-                            <constraints>
-                                <constraint firstAttribute="width" secondItem="0ON-1t-4DH" secondAttribute="height" multiplier="1:1" id="cWh-rH-xkx"/>
-                            </constraints>
-                            <state key="normal" title="Button" image="start"/>
-                        </button>
-                    </subviews>
-                </stackView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="balloon" translatesAutoresizingMaskIntoConstraints="NO" id="TpI-Pp-hHk">
+                    <rect key="frame" x="0.0" y="0.0" width="216" height="72"/>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="next" translatesAutoresizingMaskIntoConstraints="NO" id="Kpr-hK-5QD">
+                    <rect key="frame" x="182" y="16" width="18" height="18"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jog-u9-Szz">
+                    <rect key="frame" x="16" y="15" width="158" height="21"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="goI-hp-skK" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="Fuo-Dh-Wsa"/>
-                <constraint firstItem="goI-hp-skK" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="KNA-n8-gDs"/>
-                <constraint firstItem="goI-hp-skK" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="g14-Uz-5Mj"/>
-                <constraint firstItem="goI-hp-skK" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" id="qIM-xO-dLw"/>
+                <constraint firstItem="TpI-Pp-hHk" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="1ds-RV-2Sz"/>
+                <constraint firstItem="TpI-Pp-hHk" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="5Jb-hm-aAz"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="TpI-Pp-hHk" secondAttribute="trailing" id="dyd-cW-a7t"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="TpI-Pp-hHk" secondAttribute="bottom" id="zNi-jq-xVr"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
-                <outlet property="addressLabel" destination="jgm-AN-zqT" id="SNq-YR-Zor"/>
-                <outlet property="nameLabel" destination="a5u-Kn-4Zh" id="8wx-9Q-nsL"/>
+                <outlet property="nameLabel" destination="jog-u9-Szz" id="aG5-NQ-G4X"/>
             </connections>
-            <point key="canvasLocation" x="45.5" y="41"/>
+            <point key="canvasLocation" x="45" y="46"/>
         </view>
     </objects>
     <resources>
-        <image name="start" width="128" height="128"/>
+        <image name="balloon" width="196" height="96"/>
+        <image name="next" width="512" height="512"/>
     </resources>
 </document>
