--- a/Bipeople/Bipeople/Base.lproj/Navigation.storyboard
+++ b/Bipeople/Bipeople/Base.lproj/Navigation.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13156.2"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
@@ -46,32 +47,32 @@
                                 <gestureRecognizers/>
                             </activityIndicatorView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pjH-rm-9aE" customClass="GMSMapView">
-                                <rect key="frame" x="0.0" y="64" width="375" height="602.5"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outlet property="delegate" destination="MC0-9L-o62" id="cWq-3i-oxQ"/>
                                 </connections>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="68s-vc-AQZ" userLabel="Places Button">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="68s-vc-AQZ" userLabel="Places Button">
                                 <rect key="frame" x="309" y="74" width="58" height="58"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="58" id="2Ml-hp-bsD"/>
                                     <constraint firstAttribute="height" constant="58" id="CYQ-If-pm8"/>
                                     <constraint firstAttribute="width" secondItem="68s-vc-AQZ" secondAttribute="height" multiplier="1:1" id="Uuq-3F-TKH"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Button" image="placesButton"/>
+                                <state key="selected" image="selectedPlacesButton"/>
                                 <connections>
                                     <action selector="didTapPlacesButton:" destination="MC0-9L-o62" eventType="touchUpInside" id="DBk-ry-bg4"/>
                                 </connections>
                             </button>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nhe-9Y-JBH">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nhe-9Y-JBH">
                                 <rect key="frame" x="309" y="539" width="58" height="58"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="58" id="9CT-Pp-CNx"/>
-                                    <constraint firstAttribute="height" constant="58" id="HOO-XT-8RK"/>
+                                    <constraint firstAttribute="height" constant="58" id="q5u-zi-Uos"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Button" image="startButton"/>
                                 <connections>
                                     <action selector="didTapStartButton:" destination="MC0-9L-o62" eventType="touchUpInside" id="C5M-7g-gQi"/>
                                 </connections>
@@ -84,16 +85,16 @@
                             <constraint firstItem="68s-vc-AQZ" firstAttribute="top" secondItem="Y3o-EC-2d3" secondAttribute="bottom" constant="10" id="4Qt-gw-nvh"/>
                             <constraint firstItem="pjH-rm-9aE" firstAttribute="top" secondItem="Y3o-EC-2d3" secondAttribute="bottom" id="4jn-9c-Uzf"/>
                             <constraint firstItem="pjH-rm-9aE" firstAttribute="trailing" secondItem="yJC-rw-kB1" secondAttribute="trailing" id="6lF-Ge-vwe"/>
+                            <constraint firstItem="XbL-LW-ZKV" firstAttribute="top" secondItem="Nhe-9Y-JBH" secondAttribute="bottom" constant="70" id="GaA-u5-iV6"/>
                             <constraint firstItem="aC5-W2-0Gn" firstAttribute="leading" secondItem="yJC-rw-kB1" secondAttribute="leading" id="Gnz-mG-G3d"/>
                             <constraint firstItem="pjH-rm-9aE" firstAttribute="bottom" secondItem="XbL-LW-ZKV" secondAttribute="top" id="LGT-E5-AHf"/>
                             <constraint firstItem="68s-vc-AQZ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="yJC-rw-kB1" secondAttribute="leading" constant="20" symbolic="YES" id="POb-16-BDM"/>
-                            <constraint firstItem="Nhe-9Y-JBH" firstAttribute="bottom" secondItem="XbL-LW-ZKV" secondAttribute="top" constant="-70" id="QPD-de-EeN"/>
+                            <constraint firstItem="Nhe-9Y-JBH" firstAttribute="trailing" secondItem="68s-vc-AQZ" secondAttribute="trailing" id="ZrR-mX-XSp"/>
                             <constraint firstItem="pjH-rm-9aE" firstAttribute="leading" secondItem="yJC-rw-kB1" secondAttribute="leading" id="c3n-yC-yPR"/>
                             <constraint firstAttribute="trailing" secondItem="68s-vc-AQZ" secondAttribute="trailing" constant="8" id="fNg-fu-8TZ"/>
                             <constraint firstItem="aC5-W2-0Gn" firstAttribute="trailing" secondItem="yJC-rw-kB1" secondAttribute="trailing" id="mR1-eI-SoQ"/>
                             <constraint firstItem="aC5-W2-0Gn" firstAttribute="bottom" secondItem="XbL-LW-ZKV" secondAttribute="top" id="oT8-n2-c9J"/>
-                            <constraint firstItem="Nhe-9Y-JBH" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="yJC-rw-kB1" secondAttribute="leading" constant="20" symbolic="YES" id="uTH-2B-fzM"/>
-                            <constraint firstItem="Nhe-9Y-JBH" firstAttribute="trailing" secondItem="yJC-rw-kB1" secondAttribute="trailing" constant="-8" id="uxV-Pl-alg"/>
+                            <constraint firstItem="Nhe-9Y-JBH" firstAttribute="leading" secondItem="68s-vc-AQZ" secondAttribute="leading" id="rXQ-mu-Qc9"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="boolean" keyPath="keyPath" value="YES"/>
@@ -173,7 +174,7 @@
                     </connections>
                 </pongPressGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1564" y="815"/>
+            <point key="canvasLocation" x="1564" y="814.54272863568224"/>
         </scene>
         <!--Place Detail View Controller-->
         <scene sceneID="3PE-bI-FO0">
@@ -281,6 +282,9 @@
     </scenes>
     <resources>
         <image name="navigation" width="25" height="25"/>
+        <image name="placesButton" width="98" height="98"/>
         <image name="selectedNavigation" width="25" height="25"/>
+        <image name="selectedPlacesButton" width="100" height="100"/>
+        <image name="startButton" width="98" height="98"/>
     </resources>
 </document>
