--- a/Bipeople/Bipeople/Base.lproj/Navigation.storyboard
+++ b/Bipeople/Bipeople/Base.lproj/Navigation.storyboard
@@ -66,7 +66,7 @@
                                     <action selector="didTapPlacesButton:" destination="MC0-9L-o62" eventType="touchUpInside" id="DBk-ry-bg4"/>
                                 </connections>
                             </button>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nhe-9Y-JBH">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nhe-9Y-JBH">
                                 <rect key="frame" x="309" y="539" width="58" height="58"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="58" id="q5u-zi-Uos"/>
@@ -143,6 +143,7 @@
                         <outlet property="navigationMapView" destination="pjH-rm-9aE" id="rhm-CF-b6J"/>
                         <outlet property="placesButton" destination="68s-vc-AQZ" id="X0C-do-AiC"/>
                         <outlet property="startButton" destination="Nhe-9Y-JBH" id="sg7-si-7RV"/>
+                        <segue destination="m3B-xh-QwJ" kind="show" id="eWF-PA-iSJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UQF-lg-G2n" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -191,7 +192,7 @@
             </objects>
             <point key="canvasLocation" x="1564" y="814.54272863568224"/>
         </scene>
-        <!--Place Detail View Controller-->
+        <!--Title-->
         <scene sceneID="3PE-bI-FO0">
             <objects>
                 <viewController storyboardIdentifier="PlaceDetailViewController" id="m3B-xh-QwJ" customClass="PlaceDetailViewController" customModule="Bipeople" customModuleProvider="target" sceneMemberID="viewController">
@@ -204,7 +205,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="IVT-kH-bgY">
-                                <rect key="frame" x="18" y="28" width="339" height="300"/>
+                                <rect key="frame" x="18" y="72" width="339" height="300"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="SeG-IX-cEt">
                                         <rect key="frame" x="0.0" y="0.0" width="339" height="19"/>
@@ -245,13 +246,13 @@
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="관련항목" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pNF-oI-xMn">
-                                <rect key="frame" x="18" y="336" width="59" height="20.5"/>
+                                <rect key="frame" x="18" y="380" width="59" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hjw-xS-aky">
-                                <rect key="frame" x="0.0" y="364.5" width="375" height="302.5"/>
+                                <rect key="frame" x="0.0" y="408.5" width="375" height="258.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="PlacesTableCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="PlacesTableCell" id="KGk-V0-r4m">
@@ -284,13 +285,29 @@
                             <constraint firstItem="pNF-oI-xMn" firstAttribute="top" secondItem="IVT-kH-bgY" secondAttribute="bottom" constant="8" id="kwB-XM-er7"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" id="86k-qd-zl5">
+                        <barButtonItem key="leftBarButtonItem" title="뒤로" id="q0U-cI-ySQ">
+                            <connections>
+                                <action selector="didTapBackButton:" destination="m3B-xh-QwJ" id="SQp-Jp-hJq"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="이동" id="B48-gT-FS7">
+                            <connections>
+                                <action selector="didTapMoveButton:" destination="m3B-xh-QwJ" id="lyF-cd-j3h"/>
+                                <segue destination="ram-YJ-785" kind="unwind" identifier="MoveToPlace" unwindAction="unwindFromPlaceDetailVC:" id="UF8-Vt-Rw4"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
+                        <outlet property="backButton" destination="q0U-cI-ySQ" id="kWE-ZX-N2n"/>
+                        <outlet property="moveButton" destination="B48-gT-FS7" id="qDs-kt-Hqq"/>
                         <outlet property="placeAddressLabel" destination="bbd-L7-YRs" id="gb0-1S-uNY"/>
                         <outlet property="placeMapView" destination="qsK-Ck-QQT" id="qmQ-77-UNi"/>
                         <outlet property="placesTableView" destination="hjw-xS-aky" id="8CW-GR-Ims"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6La-uV-AT6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="ram-YJ-785" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2372" y="814.54272863568224"/>
         </scene>
