Add Code For Simulation

--- a/Bipeople/Bipeople/Base.lproj/Navigation.storyboard
+++ b/Bipeople/Bipeople/Base.lproj/Navigation.storyboard
@@ -207,11 +207,11 @@
                             <constraint firstItem="bZA-0f-d1K" firstAttribute="trailing" secondItem="yJC-rw-kB1" secondAttribute="trailing" id="EmH-LH-oKU"/>
                             <constraint firstItem="XbL-LW-ZKV" firstAttribute="top" secondItem="Nhe-9Y-JBH" secondAttribute="bottom" constant="70" id="GaA-u5-iV6"/>
                             <constraint firstItem="aC5-W2-0Gn" firstAttribute="leading" secondItem="yJC-rw-kB1" secondAttribute="leading" id="Gnz-mG-G3d"/>
-                            <constraint firstItem="pjH-rm-9aE" firstAttribute="bottom" secondItem="XbL-LW-ZKV" secondAttribute="top" id="LGT-E5-AHf"/>
                             <constraint firstItem="68s-vc-AQZ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="yJC-rw-kB1" secondAttribute="leading" constant="20" symbolic="YES" id="POb-16-BDM"/>
                             <constraint firstItem="bZA-0f-d1K" firstAttribute="bottom" secondItem="pjH-rm-9aE" secondAttribute="top" id="Sjp-DN-ia0"/>
                             <constraint firstItem="Enz-5l-hfU" firstAttribute="leading" secondItem="Nhe-9Y-JBH" secondAttribute="leading" id="YYP-lJ-jmv"/>
                             <constraint firstItem="Nhe-9Y-JBH" firstAttribute="trailing" secondItem="68s-vc-AQZ" secondAttribute="trailing" id="ZrR-mX-XSp"/>
+                            <constraint firstItem="pjH-rm-9aE" firstAttribute="bottom" secondItem="XbL-LW-ZKV" secondAttribute="top" id="b5n-kp-a37"/>
                             <constraint firstItem="pjH-rm-9aE" firstAttribute="leading" secondItem="yJC-rw-kB1" secondAttribute="leading" id="c3n-yC-yPR"/>
                             <constraint firstItem="68s-vc-AQZ" firstAttribute="top" secondItem="pjH-rm-9aE" secondAttribute="top" constant="8" id="cBf-hD-omO"/>
                             <constraint firstItem="Enz-5l-hfU" firstAttribute="trailing" secondItem="Nhe-9Y-JBH" secondAttribute="trailing" id="cTV-J9-eRB"/>
