웹사이트 수정

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -2107,7 +2107,7 @@
 		}
 
 		.wrapper.style2 {
-			background-color: #83d3c9;
+			background-color: #fff;
 			background-image: url("images/light-bl.svg"), url("images/light-br.svg");
 			background-position: bottom left, bottom right;
 			background-repeat: no-repeat, no-repeat;
@@ -2415,7 +2415,7 @@
 			-webkit-animation-fill-mode: forwards;
 			-ms-animation-fill-mode: forwards;
 			animation-fill-mode: forwards;
-			background: rgba(52, 27, 43, 0.5);
+			background: rgba(28, 176, 184, 0.6);
 			color: #fff;
 			display: inline-block;
 			opacity: 0;
